# recruitai

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  mcp_server.py
backend/app/adapters/: __init__.py  document_extractor.py  document_parser.py  embedding_service.py  llm_engine.py  llm_providers.py  onedrive_adapter.py  pii_masker.py  qdrant_repo.py  storage.py
backend/app/api/routes/: __init__.py  admin.py  auth.py  candidates.py  cloud_sync.py  jobs.py  notes.py  search.py  stats.py
backend/app/core/: __init__.py  config.py  database.py  privacy.py  rate_limit.py  security.py
backend/app/db/: __init__.py  models.py
backend/app/domain/: __init__.py  models.py  services.py
docs/: SECURITY_PROMPT_INJECTION.md
frontend/: next.config.js  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/candidates/: page.tsx
frontend/src/app/data/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/support/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/analytics/: Analytics.tsx
frontend/src/lib/: api.ts  auth-context.tsx  utils.ts
frontend/src/types/: index.ts
infra/: init-db.sql
(+29 files in other folders)
