[tool.poetry]
name = "recruitai-backend"
version = "0.1.0"
description = "RecruitAI-Core Backend - AI-powered talent acquisition system"
authors = ["RecruitAI Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
qdrant-client = "^1.7.0"
sentence-transformers = "^2.3.0"
httpx = "^0.26.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
unstructured = {extras = ["pdf", "docx"], version = "^0.12.0"}
instructor = "^0.5.0"
openai = "^1.10.0"
numpy = "^1.26.0"
aiofiles = "^23.2.0"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.26.0"
black = "^24.1.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.black]
line-length = 100
